--- a/notbad.html
+++ b/notbad.html
@@ -1,1 +1,10 @@
-jksfjklsdjfkldsjfklsdjldskjklsjkldsnlkdsn
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+  
+  </body>
+</html>
